--- a/lib/lcd/CMakeLists.txt
+++ b/lib/lcd/CMakeLists.txt
@@ -1,4 +1,4 @@
 aux_source_directory(. DIR_LCD_SRCS)
 
 add_library(lcd ${DIR_LCD_SRCS})
-target_link_libraries(lcd PUBLIC hardware_adc pico_stdlib)
+target_link_libraries(lcd PUBLIC hardware_adc pico_stdlib hardware_spi)
