Redesigned LCD_Driver interface to be much faster through a new buffer approach that greatly reduces memory overhead and drawing time for screen. Included SD card interface designed by WaveShare, and began implementing own file format for use with buffer and palette interface for simplicity.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,21 @@ enable_language(C CXX ASM)
 project(${PROJECT_NAME})
 pico_sdk_init()
 
-#add_subdirectory(lib/bmp)
 add_subdirectory(lib/lcd)
-#add_subdirectory(lib/utils)
+add_subdirectory(lib/utils)
+add_subdirectory(lib/sdcard)
+add_subdirectory(lib/fatfs)
+add_subdirectory(lib/config)
+add_subdirectory(lib/gui)
+add_subdirectory(lib/pmp)
 
-#include_directories(./lib/bmp)
+include_directories(./lib/pmp)
 include_directories(./lib/lcd)
-#include_directories(./lib/utils)
+include_directories(./lib/utils)
+include_directories(./lib/sdcard)
+include_directories(./lib/fatfs)
+include_directories(./lib/config)
+include_directories(./lib/gui)
 
 add_executable(${PROJECT_NAME} main.c)
 
@@ -23,6 +31,8 @@ pico_enable_stdio_uart(${PROJECT_NAME} 0)
 
 pico_add_extra_outputs(${PROJECT_NAME})
 
-#target_link_libraries(LCD bmp lcd utils pico_stdlib)
+#target_link_libraries(LCD pmp lcd utils pico_stdlib)
 
-target_link_libraries(${PROJECT_NAME} lcd hardware_adc pico_stdlib)
+target_link_libraries(${PROJECT_NAME} lcd utils hardware_adc pico_stdlib sdcard fatfs config gui pmp)
+
+#target_link_libraries(${PROJECT_NAME} lcd utils hardware_adc pico_stdlib)
